--- a/osc/src/Makefile.in
+++ b/osc/src/Makefile.in
@@ -38,7 +38,7 @@ am__aclocal_m4_deps = $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
-CONFIG_HEADER = $(top_builddir)/src/oscframework/config.h
+CONFIG_HEADER = $(top_builddir)/src/osc/config.h
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 SOURCES =
@@ -181,7 +181,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 
 # go into these dirs and process makefiles
-SUBDIRS = oscframework tests
+SUBDIRS = osc test
 all: all-recursive
 
 .SUFFIXES:
